manifests/rng.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rng
  name: rng
  namespace: tks-coins
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rng
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rng
  name: rng
  namespace: tks-coins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rng
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rng
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - image: us-east1-docker.pkg.dev/tks-gcr-pub/tks-coins/rng:v1.0.0
        imagePullPolicy: IfNotPresent
        name: rng
        resources:
          limits:
            cpu: 100m
