manifests/ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui
  name: ui
  namespace: tks-coins
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ui
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui
  name: ui
  namespace: tks-coins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ui
    spec:
      terminationGracePeriodSeconds: 1
      containers:
      - image: us-east1-docker.pkg.dev/tks-gcr-pub/tks-coins/webui:v1.0.4
        imagePullPolicy: IfNotPresent
        name: webui
