manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: tks-coins
  name: ui
  namespace: tks-coins
spec:
  rules:
  - host: coins.tstvas88.staging.k8s.us-east1.gcp.tks.sh
    http:
      paths:
      - backend:
          service:
            name: ui
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
